Edited data needed for getting annual reports

--- a/4. Feature_Generation/3.Initial_exploration_annual_report_workflow.ipynb
+++ b/4. Feature_Generation/3.Initial_exploration_annual_report_workflow.ipynb
@@ -38,6 +38,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use parallelise approach from before. https://nalepae.github.io/pandarallel/#examples\n",
+    "\n",
+    "from pandarallel import pandarallel\n",
+    "pandarallel.initialize()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -203,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +259,7 @@
        "2373"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +756,7 @@
        "[2373 rows x 21 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +781,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,6 +825,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Pandarallel will run on 10 workers.\n",
+      "INFO: Pandarallel will use Memory file system to transfer data between the main process and workers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from pandarallel import pandarallel\n",
+    "# pandarallel.initialize()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -828,8 +859,57 @@
     }
    ],
    "source": [
-    "docs_tok = text_lda.apply(data_cleaner, return_tokens=True)\n",
-    "len(docs_tok) # 6 minutes to run everything - see if there is a more effient way to to do this!!"
+    "# docs_tok = text_lda.apply(data_cleaner, return_tokens=True)\n",
+    "# len(docs_tok) # 6 minutes to run everything - see if there is a more effient way to to do this!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2373"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docs_tok = text_lda.parallel_apply(data_cleaner, return_tokens=True)\n",
+    "len(docs_tok)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This does work!!\n",
+    "\n",
+    "Try to run this with other docs - takes 1/6 of the time!!\n",
+    "\n",
+    "So can use this and run this in the future \n",
+    "\n",
+    "https://sec-api.io/docs/sec-filings-render-api/python-example\n",
+    "\n",
+    "Thanks to the API workflow given above!!\n",
+    "\n",
+    "Follow the example below for this!! Works really well!! Limitations before, due to issues before I guess.\n",
+    "\n",
+    "https://nalepae.github.io/pandarallel/#examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try other parallelisation approaches later!! For LDA etc."
    ]
   },
   {
