--- a/6.Dissertation_Full_EDA/4.R_Python_Integration_Test_JSONL_TEST_IMPORTANT.ipynb
+++ b/6.Dissertation_Full_EDA/4.R_Python_Integration_Test_JSONL_TEST_IMPORTANT.ipynb
@@ -148,10 +148,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Example list of dictionaries\n",
+    "data = [\n",
+    "    {\"name\": \"Alice\", \"age\": 25},\n",
+    "    {\"name\": \"Bob\", \"age\": 30},\n",
+    "    {\"name\": \"Charlie\", \"age\": 35}\n",
+    "]\n",
+    "\n",
+    "# Path to the output JSONL file\n",
+    "file_path = 'output.jsonl'\n",
+    "\n",
+    "# Writing each dictionary to a new line in the file\n",
+    "with open(file_path, 'w') as file:\n",
+    "    for entry in data:\n",
+    "        json.dump(entry, file)\n",
+    "        file.write('\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# put json l to save files it is fine!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    name  age\n",
+      "0  Alice   25\n",
+      "1    Bob   30\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "def read_jsonl_range(file_path, start_line, end_line):\n",
+    "    # Container for selected data\n",
+    "    data = []\n",
+    "\n",
+    "    # Open and iterate over the lines of the file\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for i, line in enumerate(file):\n",
+    "            # Check if the current line is within the desired range\n",
+    "            if start_line <= i < end_line:\n",
+    "                # Parse JSON data from the line and add to the list\n",
+    "                data.append(json.loads(line))\n",
+    "            elif i >= end_line:\n",
+    "                # Stop reading if the end line is reached\n",
+    "                break\n",
+    "\n",
+    "    # Create a DataFrame from the list of dictionaries\n",
+    "    return pd.DataFrame(data)\n",
+    "\n",
+    "# Example usage\n",
+    "df = read_jsonl_range('output.jsonl', 0, 2)\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# controls memory issue here to deal with it"
+   ]
   }
  ],
  "metadata": {
@@ -170,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
