Added Disseration code

--- a/8.EDA_All_Data/7.Annual_Report_SentimentAnalysis.ipynb
+++ b/8.EDA_All_Data/7.Annual_Report_SentimentAnalysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "4             0           0             0           0          3  12of12inf  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,38 +355,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "125             abl\n",
-       "336           abund\n",
-       "338           abund\n",
-       "438         acclaim\n",
-       "477      accomplish\n",
-       "            ...    \n",
-       "85305           win\n",
-       "85427        winner\n",
-       "85428        winner\n",
-       "85429           win\n",
-       "85964        worthi\n",
-       "Name: Word, Length: 347, dtype: object"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sentiment_words_df[sentiment_words_df['Positive'] > 0]['Word'].apply(data_cleaner, return_tokens=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,27 +380,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "125             [abl]\n",
-       "336           [abund]\n",
-       "338           [abund]\n",
-       "438         [acclaim]\n",
-       "477      [accomplish]\n",
-       "             ...     \n",
-       "85305           [win]\n",
-       "85427        [winner]\n",
-       "85428        [winner]\n",
-       "85429           [win]\n",
-       "85964        [worthi]\n",
-       "Name: Word, Length: 347, dtype: object"
+       "{'abl',\n",
+       " 'abund',\n",
+       " 'acclaim',\n",
+       " 'accomplish',\n",
+       " 'achiev',\n",
+       " 'adequ',\n",
+       " 'advanc',\n",
+       " 'advantag',\n",
+       " 'allianc',\n",
+       " 'assur',\n",
+       " 'attain',\n",
+       " 'attract',\n",
+       " 'beauti',\n",
+       " 'benefici',\n",
+       " 'benefit',\n",
+       " 'best',\n",
+       " 'better',\n",
+       " 'bolster',\n",
+       " 'boom',\n",
+       " 'boost',\n",
+       " 'breakthrough',\n",
+       " 'brilliant',\n",
+       " 'charit',\n",
+       " 'collabor',\n",
+       " 'compliment',\n",
+       " 'complimentari',\n",
+       " 'conclus',\n",
+       " 'conduc',\n",
+       " 'confid',\n",
+       " 'construct',\n",
+       " 'courteou',\n",
+       " 'creativ',\n",
+       " 'delight',\n",
+       " 'depend',\n",
+       " 'desir',\n",
+       " 'despit',\n",
+       " 'destin',\n",
+       " 'dilig',\n",
+       " 'distinct',\n",
+       " 'dream',\n",
+       " 'easi',\n",
+       " 'easier',\n",
+       " 'easili',\n",
+       " 'effici',\n",
+       " 'empow',\n",
+       " 'enabl',\n",
+       " 'encourag',\n",
+       " 'enhanc',\n",
+       " 'enjoy',\n",
+       " 'enthusiasm',\n",
+       " 'enthusiast',\n",
+       " 'excel',\n",
+       " 'except',\n",
+       " 'excit',\n",
+       " 'exclus',\n",
+       " 'exemplari',\n",
+       " 'fantast',\n",
+       " 'favor',\n",
+       " 'favorit',\n",
+       " 'friendli',\n",
+       " 'gain',\n",
+       " 'good',\n",
+       " 'great',\n",
+       " 'greatest',\n",
+       " 'greatli',\n",
+       " 'happi',\n",
+       " 'happiest',\n",
+       " 'happili',\n",
+       " 'highest',\n",
+       " 'honor',\n",
+       " 'ideal',\n",
+       " 'impress',\n",
+       " 'improv',\n",
+       " 'incred',\n",
+       " 'influenti',\n",
+       " 'inform',\n",
+       " 'ingenu',\n",
+       " 'innov',\n",
+       " 'insight',\n",
+       " 'inspir',\n",
+       " 'integr',\n",
+       " 'invent',\n",
+       " 'inventor',\n",
+       " 'lead',\n",
+       " 'leadership',\n",
+       " 'loyal',\n",
+       " 'lucr',\n",
+       " 'meritori',\n",
+       " 'opportun',\n",
+       " 'optimist',\n",
+       " 'outperform',\n",
+       " 'perfect',\n",
+       " 'perfectli',\n",
+       " 'pleas',\n",
+       " 'pleasant',\n",
+       " 'pleasantli',\n",
+       " 'pleasur',\n",
+       " 'plenti',\n",
+       " 'popular',\n",
+       " 'posit',\n",
+       " 'preemin',\n",
+       " 'premier',\n",
+       " 'prestig',\n",
+       " 'prestigi',\n",
+       " 'proactiv',\n",
+       " 'profici',\n",
+       " 'profit',\n",
+       " 'progress',\n",
+       " 'prosper',\n",
+       " 'rebound',\n",
+       " 'recept',\n",
+       " 'regain',\n",
+       " 'resolv',\n",
+       " 'revolution',\n",
+       " 'reward',\n",
+       " 'satisfact',\n",
+       " 'satisfactori',\n",
+       " 'satisfactorili',\n",
+       " 'satisfi',\n",
+       " 'smooth',\n",
+       " 'smoothli',\n",
+       " 'solv',\n",
+       " 'spectacular',\n",
+       " 'spectacularli',\n",
+       " 'stabil',\n",
+       " 'stabl',\n",
+       " 'strength',\n",
+       " 'strengthen',\n",
+       " 'strong',\n",
+       " 'stronger',\n",
+       " 'strongest',\n",
+       " 'succe',\n",
+       " 'succeed',\n",
+       " 'success',\n",
+       " 'superior',\n",
+       " 'surpass',\n",
+       " 'transpar',\n",
+       " 'tremend',\n",
+       " 'unmatch',\n",
+       " 'unparallel',\n",
+       " 'unsurpass',\n",
+       " 'upturn',\n",
+       " 'valuabl',\n",
+       " 'versatil',\n",
+       " 'vibranc',\n",
+       " 'vibrant',\n",
+       " 'win',\n",
+       " 'winner',\n",
+       " 'worthi'}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +660,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +700,7 @@
        "Name: Text_7, Length: 8381, dtype: object"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +742,7 @@
        "Name: section7_cleaned, Length: 8381, dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +787,7 @@
        "(np.int64(956), np.int64(5496), np.int64(1929))"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +815,7 @@
        "Name: section7_cleaned_sentiment, dtype: float64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,12 +830,12 @@
    "source": [
     "### Deal with uncertainty as required\n",
     "\n",
-    "These are the words that G. used previously."
+    "These are the words that used previously in the dictionary list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +926,7 @@
        "Name: section7_cleaned, Length: 8381, dtype: object"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +965,7 @@
        "Name: section7_cleaned_uncertainty_sentiment_score, dtype: float64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1347,13 +1462,125 @@
        "[8381 rows x 24 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "annual_report_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ticker', 'formType', 'accessionNo', 'cik', 'companyNameLong',\n",
+       "       'companyName', 'linkToFilingDetails', 'description', 'linkToTxt',\n",
+       "       'filedAt', 'documentFormatFiles', 'periodOfReport', 'entities', 'id',\n",
+       "       'seriesAndClassesContractsInformation', 'linkToHtml', 'linkToXbrl',\n",
+       "       'dataFiles', 'effectivenessDate', 'Text_7', 'Text_7A',\n",
+       "       'section7_cleaned', 'section7_cleaned_sentiment',\n",
+       "       'section7_cleaned_uncertainty_sentiment_score'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annual_report_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2023-12-31\n",
+       "1       2022-12-31\n",
+       "2       2021-12-31\n",
+       "3       2020-12-31\n",
+       "4       2019-12-31\n",
+       "           ...    \n",
+       "8376    2023-12-31\n",
+       "8377    2022-12-31\n",
+       "8378    2021-12-31\n",
+       "8379    2023-12-31\n",
+       "8380    2022-12-31\n",
+       "Name: periodOfReport, Length: 8381, dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annual_report_df.periodOfReport"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7610, 24)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annual_report_df['periodOfReport'] = pd.to_datetime(annual_report_df['periodOfReport'])\n",
+    "\n",
+    "# Filter out rows where the year is 2024\n",
+    "filtered_df = annual_report_df[annual_report_df['periodOfReport'].dt.year != 2023]\n",
+    "\n",
+    "# Display the filtered data\n",
+    "# print(filtered_df)\n",
+    "filtered_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2011-01-02 00:00:00')"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annual_report_df['periodOfReport'].min()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall reporting of the annual report results in 7610 annual reports from 2011 to 2022"
    ]
   },
   {
